# PIXFW_t-embed_cc1101_FW

./: CMakeLists.txt  Makefile  README.md  build.sh  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
.qoder/quests/: cc1101-firmware-dev.md
apps/core/: jammer.js  jammer.js.bak  main_menu.js  main_menu.js.bak  rf_scanner.js  rf_scanner.js.bak  signal_generator.js  spectrum_analyzer.js  spectrum_analyzer.js.bak  system_settings.js  wifi_settings.js
components/app_manager/: CMakeLists.txt  app_installer.c  app_manager.c  app_permissions.c  app_sandbox.c
components/cc1101/: CMakeLists.txt  cc1101.c  cc1101_config.c  cc1101_spi.c
components/js_api/: CMakeLists.txt  js_api.c  js_gpio_api.c  js_notification_api.c  js_rf_api.c  js_storage_api.c  js_ui_api.c  js_wifi_api.c
components/js_api/include/: js_api.h
components/lvgl_port/: CMakeLists.txt  display_driver.c  input_driver.c  lvgl_port.c  (+1 more)
components/mjs_engine/: CMakeLists.txt  mjs_console.c  mjs_engine.c  mjs_module_loader.c  mjs_native_api.c
components/mjs_engine/include/: mjs_engine.h
components/mjs_engine/mjs/: mjs.c  mjs.h
docs/: flipper_zero_ui_improvement_plan.md
examples/: README.md
main/: CMakeLists.txt  main.c
main/system/: hw_init.c  hw_init.h  system_manager.c  system_manager.h  task_manager.c  task_manager.h
sdk/: README.md  cli.js  index.js  package.json
test/: run_all_tests.js  test_cc1101_full.c  test_jammer.js  test_main_menu.js  test_rf_extensions.js  test_rf_scanner.js  test_signal_generator.js  test_spectrum_analyzer.c  test_spectrum_analyzer.js  test_wifi.js
(+24 files in other folders)
